Fixing pin oval wrapper issue on small screens.

--- a/src/app/shared/ui-components/pin/pin.page.scss
+++ b/src/app/shared/ui-components/pin/pin.page.scss
@@ -67,6 +67,7 @@
     border-radius: 50%;
     width: 100px;
     height: 100px;
+    min-height: 100px;
     background-color: #fff;
     display: flex;
     justify-content: center;
